--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ rimo-storage>=1.3.2
 bayesian-optimization
 TensorFlow >= 2.0
 onnxruntime
-#onnxruntime-gpu
+#onnxruntime-gpu　cudaデバイスを持っているなら上を消して#を消す
 numpy
